A few minor github fixes