@@ -8,43 +8,41 @@ import io.github.railroad.vcs.RepositoryTypes;
 import io.github.railroad.vcs.connections.AbstractConnection;
 import io.github.railroad.vcs.connections.Profile;
 import javafx.scene.image.Image;
+import okhttp3.internal.http.HttpStatusCodesKt;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.ProtocolException;
-import java.net.URL;
+import java.net.*;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
 public class GithubConnection extends AbstractConnection {
-    private Profile account;
+    private final Profile account;
 
     public GithubConnection(Profile profile) {
         this.account = profile;
     }
 
-    private List<HttpResponse> readHTTP(String method, String postixurl, String body) throws RuntimeException {
-        return readHTTP(method, postixurl, body, true);
+    private List<HttpResponse> readHTTP(String method, String postixUrl, String body) throws RuntimeException {
+        return readHTTP(method, postixUrl, body, true);
     }
 
-    private List<HttpResponse> readHTTP(String method, String postixurl, String body, boolean enable_pages) throws RuntimeException {
+    private List<HttpResponse> readHTTP(String method, String postixUrl, String body, boolean enablePages) throws RuntimeException {
         if (account.getAccessToken().isEmpty()) {
             throw new RuntimeException("Missing Access Token");
         }
 
         List<HttpResponse> result = new ArrayList<>();
 
-        String request_url = "https://api.github.com/" + postixurl;
+        String request_url = "https://api.github.com/" + postixUrl;
         boolean finished = false;
         try {
 
             while (!finished) {
-                URL url = new URL(request_url);
+                URL url = new URI(request_url).toURL();
                 var con = (HttpURLConnection) url.openConnection();
                 con.setRequestMethod(method.toUpperCase());
                 con.setRequestProperty("Accept", "application/vnd.github+json");
@@ -52,13 +50,13 @@ public class GithubConnection extends AbstractConnection {
                 con.setRequestProperty("Authorization", "Bearer " + account.getAccessToken());
                 var in = new BufferedReader(new InputStreamReader(con.getInputStream()));
                 String inputLine;
-                var content = new StringBuffer();
+                var content = new StringBuilder();
                 var statusCode = con.getResponseCode();
                 while ((inputLine = in.readLine()) != null) {
                     content.append(inputLine);
                 }
 
-                if (enable_pages) {
+                if (enablePages) {
                     if (con.getHeaderField("link") != null) {
                         finished = true;
                         for (String el : con.getHeaderField("link").split(",")) {
@@ -78,47 +76,43 @@ public class GithubConnection extends AbstractConnection {
                 result.add(new HttpResponse(content.toString(), statusCode));
             }
 
-        } catch (IOException e) {
-            if (e instanceof ProtocolException) {
-                throw new RuntimeException("Protocol error: " + e.getMessage(), e);
-            } else if (e instanceof MalformedURLException) {
-                throw new RuntimeException("URL is malformed: " + e.getMessage(), e);
+        } catch (IOException | URISyntaxException exception) {
+            if (exception instanceof ProtocolException) {
+                throw new RuntimeException("Protocol error: " + exception.getMessage(), exception);
+            } else if (exception instanceof MalformedURLException) {
+                throw new RuntimeException("URL is malformed: " + exception.getMessage(), exception);
+            } else if (exception instanceof IOException) {
+                throw new RuntimeException("I/O error: " + exception.getMessage(), exception);
             } else {
-                throw new RuntimeException("I/O error: " + e.getMessage(), e);
+                throw new RuntimeException("URI syntax error: " + exception.getMessage(), exception);
             }
-
         }
         return result;
     }
 
     private List<Repository> getUserRepos() {
         List<Repository> repositoryList = new ArrayList<>();
-        try {
-            Railroad.LOGGER.debug("VCS - Github - Downloading repos");
-            List<HttpResponse> output = readHTTP("GET", "user/repos?per_page=20", "");
-            if (!output.isEmpty()) {
-                for (HttpResponse http_response : output) {
-                    if (http_response.getStatusCode() == 200) {
-                        if (!http_response.getContent().isBlank()) {
-                            JsonArray repos = Railroad.GSON.fromJson(http_response.content, JsonArray.class);
-                            for (JsonElement element : repos) {
-                                if (element.isJsonObject()) {
-                                    var repository = new Repository(RepositoryTypes.GIT);
-                                    repository.setRepositoryName(element.getAsJsonObject().get("name").getAsString());
-                                    repository.setRepositoryURL(element.getAsJsonObject().get("url").getAsString());
-                                    repository.setRepositoryCloneURL(element.getAsJsonObject().get("clone_url").getAsString());
-                                    repository.setIcon(Optional.of(new Image(element.getAsJsonObject().get("owner").getAsJsonObject().get("avatar_url").getAsString())));
-                                    repository.setConnection(this);
-                                    repositoryList.add(repository);
-                                }
+        Railroad.LOGGER.debug("VCS - Github - Downloading repos");
+        List<HttpResponse> output = readHTTP("GET", "user/repos?per_page=20", "");
+        if (!output.isEmpty()) {
+            for (HttpResponse response : output) {
+                if (response.statusCode() == 200) {
+                    if (!response.content().isBlank()) {
+                        JsonArray repos = Railroad.GSON.fromJson(response.content, JsonArray.class);
+                        for (JsonElement element : repos) {
+                            if (element.isJsonObject()) {
+                                var repository = new Repository(RepositoryTypes.GIT);
+                                repository.setRepositoryName(element.getAsJsonObject().get("name").getAsString());
+                                repository.setRepositoryURL(element.getAsJsonObject().get("url").getAsString());
+                                repository.setRepositoryCloneURL(element.getAsJsonObject().get("clone_url").getAsString());
+                                repository.setIcon(Optional.of(new Image(element.getAsJsonObject().get("owner").getAsJsonObject().get("avatar_url").getAsString())));
+                                repository.setConnection(this);
+                                repositoryList.add(repository);
                             }
                         }
                     }
-
                 }
             }
-        } catch (Exception exception) {
-            Railroad.LOGGER.error("Github Download repos " + exception.getMessage());
         }
 
         return repositoryList;
@@ -137,7 +131,7 @@ public class GithubConnection extends AbstractConnection {
     @Override
     public boolean cloneRepo(Repository repository, Path path) {
         if (repository.getRepositoryType() == RepositoryTypes.GIT) {
-            Railroad.LOGGER.info("Cloning Repo:" + repository.getRepositoryCloneURL() + " to:" + path.toAbsolutePath());
+            Railroad.LOGGER.info("Cloning Repo:{} to:{}", repository.getRepositoryCloneURL(), path.toAbsolutePath());
             var processBuilder = new ProcessBuilder();
             processBuilder.command("git", "clone", repository.getRepositoryCloneURL(), path.toAbsolutePath().resolve(repository.getRepositoryName()).toString());
 
@@ -181,15 +175,15 @@ public class GithubConnection extends AbstractConnection {
         List<HttpResponse> output = null;
         try {
             output = readHTTP("GET", "user/repos?per_page=1", "", false);
-        } catch (Exception e) {
-            Railroad.LOGGER.error("Github Validation - " + e.getMessage());
+        } catch (Exception exception) {
+            Railroad.LOGGER.error("Github Validation", exception);
             return false;
         }
 
         if (output.isEmpty()) {
             return false;
         } else {
-            return output.get(0).getStatusCode() == 200;
+            return output.getFirst().statusCode() == 200;
         }
     }
 
@@ -198,21 +192,6 @@ public class GithubConnection extends AbstractConnection {
         return this.account;
     }
 
-    private class HttpResponse {
-        private String content;
-        private int statusCode;
-
-        public HttpResponse(String content, int statusCode) {
-            this.content = content;
-            this.statusCode = statusCode;
-        }
-
-        public String getContent() {
-            return content;
-        }
-
-        public int getStatusCode() {
-            return statusCode;
-        }
+    private record HttpResponse(String content, int statusCode) {
     }
 }
